# vllm-warden

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  changelog.md  docker-compose.yml  pyproject.toml  pytest-unit.xml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  main.py
app/auth/: bearer.py  csrf.py  deps.py  jwt.py  jwt_secret.py  origin.py  routes.py  sse_tickets.py  stream_registry.py
app/cache/: __init__.py  routes_api.py  scanner.py
app/chat/: active_requests.py  playground_store.py  routes_api.py
app/db/: constants.py  database.py  migrations.py
app/header/: routes_api.py
app/landing/: landing.html  routes.py
app/models/: discovery.py  fit.py  gpu_capability.py  load_preflight.py  pull_task.py  routes_api.py  routes_logs.py  schemas.py  sharding.py  stack_classifier.py  suggest.py
app/presets/: __init__.py  builtin.json  routes_api.py
app/proxy/: auth.py  envelope_hint.py  request_registry.py  routes.py  scheduler.py  tokenizers.py
app/runtime/: cmd_builder.py  env_builder.py  gpu_ownership.py  log_diagnostics.py  port_alloc.py  stats_pruner.py  stats_sampler.py  supervisor.py  warmup_probe.py
app/settings/: routes_api.py
app/setup/: routes_api.py  state_machine.py
app/stats/: live_engine.py  (+2 more)
docs/: live-stats-spec.md  operating.md  releasing.md  tested-stacks.md
frontend/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
scripts/: publish-github.sh  smoke-caddy-redirects.sh
tests/: conftest.py
(+357 files in other folders)
